# karthikVoicEra

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
ai4bharat_stt_server/: .gitignore  server.py
ai4bharat_tts_server/: .gitignore  ragged_parler_tts.py  ragged_parler_utils.py  requirements.txt  server.py  streamer.py  test_model_step.py
ai4bharat_tts_server/inference_server/: __init__.py  configuration_parler_tts.py  modeling_parler_tts.py
ai4bharat_tts_server/inference_server/utils/: __init__.py  attention.py  base.py  causal_lm.py  decoder.py  decoder_layer.py  delay_pattern.py  docstrings.py  generation.py  outputs.py  positional_embedding.py  tensor_ops.py
ai4bharat_tts_server/tests/: test_simple_stream.py  test_single_wav_client.py  test_tts_latency_concurrent.py
examples/: coaching_agent.py  simple_call.py  with_tools.py
voice_2_voice_server/: main.py  requirements.txt
voice_2_voice_server/api/: __init__.py  bot.py  server.py  services.py
voicera/: __init__.py  call.py  pipeline.py  tools.py
voicera/audio/: __init__.py  call_quality.py  greeting_filter.py  noise_filter.py  optimizations.py
voicera/indian/: __init__.py  ai4bharat_stt.py  ai4bharat_tts.py  bhashini_stt.py  bhashini_tts.py  language_maps.py
voicera/providers/: __init__.py  llm.py  stt.py  tts.py
voicera/telephony/: __init__.py  vobiz.py
voicera_backend/app/: config.py
voicera_frontend/: next.config.ts  package-lock.json
voicera_frontend/app/: page.tsx
(+6 files in other folders)
